{
    "name": "Controls",
    "maps": [
        {
            "name": "DevCheats",
            "id": "c4d6b50d-3ed4-45db-a72b-7aa61d1158cc",
            "actions": [
                {
                    "name": "NextWave",
                    "type": "Button",
                    "id": "a205ddde-172f-45cb-9521-b33864dee065",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextLevel",
                    "type": "Button",
                    "id": "3946efb7-a03f-490d-b620-18111b4877e5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevLevel",
                    "type": "Button",
                    "id": "f8fda95d-bace-42cb-82a0-76c4f94aef05",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BuyUnit",
                    "type": "Button",
                    "id": "e36d820e-5aed-46cb-8430-c8624448bad5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddSoftCurrency",
                    "type": "Button",
                    "id": "47560b4f-7371-410f-91bb-2624a09de6d4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AddSummonCurrency",
                    "type": "Button",
                    "id": "f283a0b2-ff97-4a3a-8f40-a22a0db38a0f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RemoveGameSaves",
                    "type": "PassThrough",
                    "id": "15c0bd2a-951c-4e6d-9089-6a185961b91e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "0a458f3c-c094-4f2c-b8f7-5cbd1cc53765",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpentEnergy",
                    "type": "Button",
                    "id": "7600a3d9-e583-4394-9331-ae340f885e1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RestoreEnergy",
                    "type": "Button",
                    "id": "6eb7adc7-ad1b-49c1-afeb-be3e222e3d13",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KillEnemyUnit",
                    "type": "Button",
                    "id": "49eb447b-0c83-4a9c-9828-a993f1db8094",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KillAllEnemies",
                    "type": "Button",
                    "id": "66e95f12-601e-46e9-b619-fa526cb9bfe7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "IncreaseHeroLevel",
                    "type": "Button",
                    "id": "c8bfb49e-c255-4c29-be2a-c7a21e953c0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ResetUpgrades",
                    "type": "Button",
                    "id": "4b97bdc7-11ab-4418-bc99-e7deb7733fd0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c34a49d4-c108-4e2c-893b-a903d5045b13",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextWave",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df0ce860-316c-4aa5-81e9-b773a6295194",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff6b4f8b-daa1-4c70-9213-3eecbb28a5c7",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4926dfa-765c-4597-9acd-fe4b7cd9be96",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BuyUnit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa0a49b9-ca52-45d8-9f07-b7b022c933e8",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddSoftCurrency",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cf19889-84d1-471e-9c7f-d74e0227f3c5",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AddSummonCurrency",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "M [Keyboard]",
                    "id": "04dbef62-1695-4d9d-9547-c5b4dccff747",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveGameSaves",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "e72a1967-b063-428d-ae2e-81601a190881",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveGameSaves",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "26cfb299-a213-42d9-bd35-7c2054fc3332",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RemoveGameSaves",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "14f40531-8320-4bcf-b17a-9a5ee5a87994",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cda2c59e-b66f-438f-8482-d6bf7c103568",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpentEnergy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3aca406b-6310-4571-8a40-202b6c314661",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RestoreEnergy",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4e8c816-2234-44d2-b38e-bf2b4e97c193",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillEnemyUnit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Two Modifiers",
                    "id": "ff1f5bbb-d4f7-40fc-8894-dda2eb8b35b2",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillAllEnemies",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "9709ec45-e63c-45fc-8110-bf4877af7948",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillAllEnemies",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "f15ac7ce-f028-472a-92c8-af7e9e2eea06",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillAllEnemies",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "801d7421-024a-42fc-92b0-781770182a90",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "KillAllEnemies",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5ada361c-f5cc-4b02-8943-3e44313e2ac7",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "IncreaseHeroLevel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4da24d1-5089-4884-bf94-0b2b171f2e80",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ResetUpgrades",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}